# Rezerwacja_czasu

./: Lista_wymagan.txt  README.md  Raport.txt  kryteria_akceptacji.txt  scenariusze.txt
Backend/: CMakeLists.txt  test.txt
Backend/src/: main.cpp
Backend/src/domain/: Event.hpp  TimeSlot.hpp  User.hpp
Backend/src/service/: EventSchedulingService.hpp  NotificationService.hpp
Backend/tests/: EventSchedulingServiceTest.cpp
Historics + Kryteria/: Kryteria_Akceptacji
